<resources>
    <string name="app_name">Cov19-eg</string>
    <string name="name">الاسم</string>
    <string name="phone">رقم الهاتف</string>
    <string name="age">السن</string>
    <string name="register">تسجيل</string>
    <string name="invalid_phone_number">من فضلك ادخل رقم الهاتف صحيح</string>
    <string name="invalid_name">من فضلك ادخل الاسم</string>
    <string name="invalid_age">من فضلك ادخل السن</string>
    <string name="invalid_province">من فضلك اختر اسم المحافظة</string>
    <string name="invalid_gender">من فضلك اختر النوع</string>
    <string name="please_wait">please wait</string>
    <string name="check1">إرتفاع درجة الحرارة أكثر من 38 درجة مئوية</string>
    <string name="check2">سعال شديد أو متزايد</string>
    <string name="check3">احتقان شديد في الحلق</string>
    <string name="check4">قئ أو إسهال</string>
    <string name="check5">مرض مزمن: سكر - ضغط - قلب &#8230;</string>
    <string name="check6">مخالطة لحالة إلتهاب تنفسي حاد</string>
    <string name="check7">زيارة مكان صحي تثبت فيه حالة موجبة</string>
    <string name="check8">أن تكون أحد العاملين بالقطاع الصحي أو العزل الصحي</string>
    <string name="check9">سفر داخل مصر (شرم الشيخ)  أو خارج مصر خلال اخر 14 يوم</string>
    <string name="check">فحص</string>
    <string name="ok">حسنا</string>
    <string name="you_are_ok">انت بصحة جيدة &#8230; إلتزم البيت</string>
    <string name="self_isolation">إلتزم بالبيت&#8230; عزل ذاتي</string>
    <string name="call_doctor">إستشير الطبيب هاتفيا &#8230; إعزل نفسك في البيت</string>
    <string name="call_hospital">من المحتمل اصابتك بالكورونا الرجاء الاتصال ب 105 لإتخاذ الاجراءات</string>
    <string name="virus_check">فحص فيروس الكورونا</string>
    <string name="register_success">تم التسجيل بنجاح</string>
    <string name="register_failed">فشل التسجيل حاول مرة اخرى</string>
    <string name="select_symptoms">من فضلك اختر الاعراض التي تشعر بها</string>
    <string name="infection_percentage">نسبة الاصابة : %1$s </string>
    <string name="yourCases">الحالات المضافه</string>
    <string name="stay_safe">Stay Safe</string>
    <string name="stay_home">Stay Home</string>
    <string name="location_rationale">App need to acces our location so it can warn you from heat areas and outbreak location on the go .</string>
</resources>
