<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/black_gradient">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:singleLine="true"
                android:textColor="@color/carbon_green_a100"
                android:text="@string/virus_check"
                android:textSize="25sp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"/>

        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/black_gradient"
            tools:context=".views.CheckActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/select_symptoms"
                    android:textSize="22dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/wit"
                    android:gravity="center_vertical"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/check1_layout"
                    android:paddingStart="10dp"
                    android:onClick="checkLayout"
                    android:paddingEnd="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:id="@+id/checkbox1"
                        android:gravity="center"
                        android:buttonTint="@color/carbon_green_100"
                        android:layout_gravity="center_vertical"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/check1"
                        android:textSize="18dp"
                        android:textColor="@color/carbon_green_100"
                        android:gravity="center_vertical"/>

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/carbon_green_100"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/check2_layout"
                    android:paddingStart="10dp"
                    android:onClick="checkLayout"
                    android:paddingEnd="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:id="@+id/checkbox2"
                        android:gravity="center"
                        android:buttonTint="@color/carbon_green_100"
                        android:layout_gravity="center_vertical"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/check2"
                        android:textSize="18dp"
                        android:textColor="@color/carbon_green_100"
                        android:gravity="center_vertical"/>

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/carbon_green_100"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/check3_layout"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:onClick="checkLayout"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:id="@+id/checkbox3"
                        android:buttonTint="@color/carbon_green_100"
                        android:gravity="center"
                        android:layout_gravity="center_vertical"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/check3"
                        android:textSize="18dp"
                        android:textColor="@color/carbon_green_100"
                        android:gravity="center_vertical"/>

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/carbon_green_100"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/check4_layout"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:onClick="checkLayout"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:id="@+id/checkbox4"
                        android:buttonTint="@color/carbon_green_100"
                        android:gravity="center"
                        android:layout_gravity="center_vertical"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/check4"
                        android:textSize="18dp"
                        android:textColor="@color/carbon_green_100"
                        android:gravity="center_vertical"/>

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/carbon_green_100"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/check5_layout"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:onClick="checkLayout"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:id="@+id/checkbox5"
                        android:buttonTint="@color/carbon_green_100"
                        android:gravity="center"
                        android:layout_gravity="center_vertical"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/check5"
                        android:textSize="18dp"
                        android:textColor="@color/carbon_green_100"
                        android:gravity="center_vertical"/>

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/carbon_green_100"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/check6_layout"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:onClick="checkLayout"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:id="@+id/checkbox6"
                        android:buttonTint="@color/carbon_green_100"
                        android:gravity="center"
                        android:layout_gravity="center_vertical"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/check6"
                        android:textSize="18dp"
                        android:textColor="@color/carbon_green_100"
                        android:gravity="center_vertical"/>

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/carbon_green_100"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/check7_layout"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:onClick="checkLayout"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:id="@+id/checkbox7"
                        android:buttonTint="@color/carbon_green_100"
                        android:gravity="center"
                        android:layout_gravity="center_vertical"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/check7"
                        android:textSize="18dp"
                        android:textColor="@color/carbon_green_100"
                        android:gravity="center_vertical"/>

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/carbon_green_100"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/check8_layout"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_marginTop="5dp"
                    android:onClick="checkLayout"
                    android:layout_marginBottom="5dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:id="@+id/checkbox8"
                        android:buttonTint="@color/carbon_green_100"
                        android:gravity="center"
                        android:layout_gravity="center_vertical"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/check8"
                        android:textSize="18dp"
                        android:textColor="@color/carbon_green_100"
                        android:gravity="center_vertical"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/carbon_green_100"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/check9_layout"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:onClick="checkLayout"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:id="@+id/checkbox9"
                        android:buttonTint="@color/carbon_green_100"
                        android:gravity="center"
                        android:layout_gravity="center_vertical"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/check9"
                        android:textSize="18dp"
                        android:textColor="@color/carbon_green_100"
                        android:gravity="center_vertical"/>

                </LinearLayout>


                <carbon.widget.Button
                    android:id="@+id/check"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="32dp"
                    android:onClick="check"
                    android:background="@drawable/co19_button_gradient"
                    android:text="@string/check"
                    android:textSize="22sp"
                    app:carbon_cornerRadius="10dp"
                    app:carbon_rippleColor="@color/carbon_white" />



            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</layout>
