<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
<include
    android:id="@+id/l_tool_bar"
    android:layout_width="match_parent"
    android:layout_height="56dp"
   layout="@layout/my_tool_bar"
    />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/black_gradient"
            tools:context=".views.RegisterActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">



                <carbon.widget.InputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:carbon_labelTextSize="20sp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/name_layout"
                    app:carbon_label="@string/name"
                    app:carbon_labelStyle="persistent">
                    <carbon.widget.EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textColor="@color/black"
                        android:padding="5dp"
                        app:carbon_required="true"
                        android:layout_margin="10dp"
                        android:singleLine="true"
                        android:inputType="textMultiLine"
                        android:id="@+id/name"
                        android:background="@color/carbon_white"
                        app:carbon_cornerRadius="5dp" />
                </carbon.widget.InputLayout>


                <carbon.widget.InputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:carbon_labelTextSize="20sp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/phone_layout"
                    app:carbon_label="@string/phone"
                    app:carbon_labelStyle="persistent">
                    <carbon.widget.EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textColor="@color/black"
                        android:padding="5dp"
                        app:carbon_required="true"
                        android:layout_margin="10dp"
                        android:inputType="number"
                        android:singleLine="true"
                        android:id="@+id/phone"
                        android:background="@color/carbon_white"
                        app:carbon_cornerRadius="5dp" />
                </carbon.widget.InputLayout>

                <carbon.widget.InputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:carbon_labelTextSize="20sp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/age_layout"
                    app:carbon_label="@string/age"
                    app:carbon_labelStyle="persistent"
                    >
                    <carbon.widget.EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textColor="@color/black"
                        android:padding="5dp"
                        app:carbon_required="true"
                        android:layout_margin="10dp"
                        android:inputType="number"
                        android:singleLine="true"
                        android:id="@+id/age"
                        android:background="@color/carbon_white"
                        app:carbon_cornerRadius="5dp" />
                </carbon.widget.InputLayout>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:id="@+id/gender_spinner"/>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:id="@+id/province_spinner"/>


                <carbon.widget.Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="32dp"
                    android:onClick="register"
                    android:background="@drawable/co19_button_gradient"
                    android:text="@string/register"
                    android:textSize="22sp"
                    app:carbon_cornerRadius="10dp"
                    app:carbon_rippleColor="@color/carbon_white" />




            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</layout>
